--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,1 @@
-Atomic was written by David A. Ventimiglia <dventimi@gmail.com>.
+Radium Salt was written by David A. Ventimiglia <dventimi@gmail.com>.
