--- a/README
+++ b/README
@@ -1,12 +1,12 @@
-Atomic is a programming-free Java web service and web application
-framework for relational databases.  With Atomic, the database IS the
+RadiumSalt is a programming-free Java web service and web application
+framework for relational databases.  With RadiumSalt, the database IS the
 application. 
 
 BUILDING
 ========
 
 1. Source the setenv.sh file in this directory to set up your
-environment.  At the moment, this only sets the ATOMIC_HOME
+environment.  At the moment, this only sets the RADIUMSALT_HOME
 environment variable.  Currently, this variable is only used by
 .dir-locals.el and Emacs, so that you can use the Emacs `compile'
 command from within any subdirectory of the project root directory.
@@ -26,10 +26,6 @@ Makefiles.
 
         sudo make install
 
-5. Run Atomic using Make.
+5. Run RadiumSalt
 
-        make run-atomic
-
-6. Run Cosmotron using Make.
-
-        make run-cosmotron
+        salt
