Changed the README file to Markdown format

--- a/README
+++ b/README
@@ -1,31 +1,1 @@
-RadiumSalt is a programming-free Java web service and web application
-framework for relational databases.  With RadiumSalt, the database IS the
-application. 
-
-BUILDING
-========
-
-1. Source the setenv.sh file in this directory to set up your
-environment.  At the moment, this only sets the RADIUMSALT_HOME
-environment variable.  Currently, this variable is only used by
-.dir-locals.el and Emacs, so that you can use the Emacs `compile'
-command from within any subdirectory of the project root directory.
-
-	source setenv.sh
-
-2. Run the configure script to probe your system and generate the
-Makefiles. 
-
-        ./configure
-
-3. Compile using Make.
-
-   	make
-
-4. Install using Make.
-
-        sudo make install
-
-5. Run RadiumSalt
-
-        salt
+README.md
