--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,1 @@
-Radium Salt was written by David A. Ventimiglia <dventimi@gmail.com>.
+ProtonChamber was written by David A. Ventimiglia <davidaventimiglia@gmail.com>.
