--- a/TODO
+++ b/TODO
@@ -9,11 +9,11 @@
 * TODO Add write support to the service
   - read a single entity
   - read a single property
-* TODO Add navigation support to the service
+* DONE Add navigation support to the service
   - one-to-one navigation
   - one-to-many navigation
 * TODO Add system query options support to the service
-*** TODO Add system query options support ($top, $count and $skip) to the service
+*** DONE Add system query options support ($top, $count and $skip) to the service
 *** TODO Add system query options support ($select and $expand) to the service
 *** TODO Add system query options support ($orderby) to the service
 *** TODO Add system query options support ($filter) to the service
@@ -23,3 +23,39 @@
 * TODO Add "deep insert" handling to the service
 * TODO Add "Bound Actions" to the service
 * TODO Enable Entity Collection streaming support
+* 13.1.1 OData 4.0 Minimal Conformance Level
+*** DONE 1. MUST publish a service document at the service root (section 11.1.1)
+*** DONE 2. MUST return data according to the[OData-JSON] format
+*** DONE 3. MUST use server-driven paging when returning partial results (section 11.2.6.7) and not use any other mechanism
+*** DONE 4. MUST return the appropriate OData-Version header (section 8.1.5)
+*** DONE 5. MUST conform to the semantics the following headers, or fail the request
+***** DONE 5.1. Accept (section 8.2.1)
+***** DONE 5.2. OData-MaxVersion (section 8.2.7)
+*** TODO 6. MUST follow OData guidelines for extensibility (section 6 and all subsections)
+*** TODO 7. MUST successfully parse the request according to [OData-ABNF] for any supported system query options and either follow the specification or return 501 Not Implemented for any unsupported functionality (section 9.3.1)
+*** DONE 8. MUST expose only data types defined in [OData-CSDLXML]
+*** DONE 9. MUST NOT require clients to understand any metadata or instance annotations (section 6.4), custom headers (section 6.5), or custom content (section 6.2) in the payload in order to correctly consume the service
+*** DONE 10. MUST NOT violate any OData update semantics (section 11.4 and all subsections)
+*** DONE 11. MUST NOT violate any other OData-defined semantics
+*** TODO 12. SHOULD support $expand (section 11.2.5.2)
+*** DONE 13. SHOULD publish metadata at $metadata according to [OData-CSDLXML] and MAY publish metadata according to [OData-CSDLJSON] (section 11.1.2)
+*** DONE 14. MUST support prefixed variants of supported headers and preference values
+*** TODO 15. MUST support enumeration and duration literals in URLs with the type prefix
+*** TODO 16. MUST return an HTTP message as the final response to an asynchronous request with an OData-MaxVersion value of 4.0 and an Accept header including application/http.
+*** TODO 17. MAY return the AsyncResult header in the final response to an asynchronous request
+*** TODO 18. MUST include edit links (explicitly or implicitly) for all updatable or deletable resources according to [OData-JSON]
+*** DONE 19. MUST support POST of new entities to insertable entity sets (section 11.4.1.5 and 11.4.2.1)
+*** TODO 20. MUST support POST of new related entities to updatable navigation properties (section 11.4.2)
+*** TODO 21. MUST support POST to $ref to add an existing entity to an updatable related collection (section 11.4.6.1)
+*** TODO 22. MUST support PUT to $ref to set an existing single updatable related entity (section 11.4.6.3)
+*** TODO 23. MUST support PATCH to all edit URLs for updatable resources (section 11.4.3)
+*** TODO 24. MUST support DELETE to all edit URLs for deletable resources (section 11.4.5)
+*** DONE 25. MUST support DELETE to $ref to remove a reference to an entity from an updatable navigation property (section 11.4.6.2)
+*** TODO 26. MUST support if-match header in update/delete of any resources returned with an ETag (section 11.4.1.1)
+*** TODO 27. MUST return a Location header with the edit URL or read URL of a created resource (section 11.4.2)
+*** TODO 28. MUST include the OData-EntityId header in response to any create or upsert operation that returns 204 No Content (section 8.3.2)
+*** TODO 29. MUST support Upserts (section 11.4.4)
+*** TODO 30. SHOULD support PUT and PATCH to an individual primitive (section 11.4.9.1) or complex (section 11.4.9.3) property (respectively)
+*** TODO 31. SHOULD support DELETE to set an individual property to null (section 11.4.9.2)
+*** TODO 32. SHOULD support deep inserts (section 11.4.2.2)
+*** TODO 33. MAY support set-based updates (section 11.4.13) or deletes (section 11.4.14) to members of a collection
