--- a/TODO
+++ b/TODO
@@ -59,3 +59,5 @@
 *** TODO 31. SHOULD support DELETE to set an individual property to null (section 11.4.9.2)
 *** TODO 32. SHOULD support deep inserts (section 11.4.2.2)
 *** TODO 33. MAY support set-based updates (section 11.4.13) or deletes (section 11.4.14) to members of a collection
+* TODO Fix Maven WARNING messages about plugin versions.
+* TODO Fix Maven ERROR messages about minimum required version of Maven.
